--- a/static/css/sass/cdr_homepage.scss
+++ b/static/css/sass/cdr_homepage.scss
@@ -80,7 +80,8 @@ body {
 .logo-small {
   a, i {
     color: white;
-    font-size: 16px;
+    font-size: 19px;
+    font-weight: 700;
   }
 
   img {
