--- a/static/css/sass/cdr_ui_styles.scss
+++ b/static/css/sass/cdr_ui_styles.scss
@@ -399,8 +399,8 @@ p.no-search-results {
   }
 
   .display-note-btn {
-    background-color: $unc-blue;
-    border: 1px solid $unc-blue;
+    background-color: #1A698C;
+    border: 1px solid #1A698C;
     border-radius: 100%;
     color: white;
     font-weight: bold;
